src/objects/ints__TUCR_Error__c.object
<CustomObject>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR Errors</relationshipLabel>
        <relationshipName>TUCR_Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Error</label>
    <nameField>
        <label>Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TUCR Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>